--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="Images\profile.jpg">
         <div id="paragraph">
           <p class="who-am-i">
-          <h1>About me</h1>
+          <h1>About me gfg</h1>
           Hi, I'm Gregory Quiñones currently a senior at the polytechnic university of Puerto Rico.
           I study computer engineering and my goal is to become a software engineer. 
           I have experience working with a fortune 500 company and frameworks like angular
