fixing styling lowercase

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="about-me">
-        <img src="Images\profile.jpg">
+        <img src="images\profile.jpg">
         <div id="paragraph">
           <p class="who-am-i">
           <h1>About me</h1>
