--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <div class="toolbar">
       <button type="button" onclick="swapStyle()"><a>Swap Stylesheet</a></button>
     </div>
-    <script src="/script.js"></script>
+    <script src="/Homework-1-Internet-Programing/script.js"></script>
   </body>
 </html>
