--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>The Portfolio</title>
-    <link id="linkStyle" rel="stylesheet" href="Style2.css" />
+    <link id="linkStyle" rel="stylesheet" href="Style.css" />
   </head>
   <body>
     <div class="toolbar">
@@ -53,6 +53,6 @@
     <div class="toolbar">
       <button type="button" onclick="swapStyle()"><a>Swap Stylesheet</a></button>
     </div>
-    <script src="/Homework-1-Internet-Programing/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
