--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li><a href="index.html">About me</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="Certificates.html">Certificates</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
         </ul>
     </div>
     <div class="about-me">
