--- a/Certificates.html
+++ b/Certificates.html
@@ -15,6 +15,8 @@
           <li><a href="index.html">About me</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="Certificates.html">Certificates</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="Adobe.html">Animations</a></li>
         </ul>
       </div>
     </div>
