--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="experience.html">Experience</a></li>
           <li><a href="Certificates.html">Certificates</a></li>
           <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="Adobe.html">Animations</a></li>
         </ul>
     </div>
     <div class="about-me">
