Implementing XML, XSD and XSL features

--- a/XML_page.html
+++ b/XML_page.html
@@ -3,6 +3,7 @@
   <head>
     <title>The Portfolio</title>
     <link id="linkStyle" rel="stylesheet" href="Style.css" />
+  
   </head>
   <body>
     <div class="toolbar">
@@ -22,21 +23,20 @@
       </div>
     </div>
 
-    <div class="certificates">
     <div class="about-me">
-      <ul class="skills">
-       <li><h1>Certificates</h1></li>
-        <ul>
-          <li>"Certificado de Liderazgo Corporativo y Empresarial” (60 contact hours)</li>
-          <li>Leading with Data Science: How to Stand Out in The Mortgage Industry</li>
-        </ul>
-      </ul>
+
+   <h1>XML Documents</h1>
+
+   <p>In this page you can choose to view or download the XML,XSL and XSD documents</p>
+  
+
+    <div class="Selections">
+      <a><button type="button" onclick="showXML()">View XML</button></a>
+      <a href="XML.zip"  download="XML.zip"><button>Download XML</button></a>
     </div>
   </div>
 
-      <div class=" footer toolbar">
-        <button type="button" onclick="swapStyle()"><a>Swap Stylesheet</a></button>
-      </div>
+
       <script src="/script.js"></script>
   </body>
 </html>
