--- a/experience.html
+++ b/experience.html
@@ -18,6 +18,7 @@
           <li><a href="Certificates.html">Certificates</a></li>
           <li><a href="quiz.html">Quiz</a></li>
           <li><a href="Adobe.html">Animations</a></li>
+          <li><a href="XML_page.html">XML</a></li>
         </ul>
       </div>
     </div>
